# main.go
@@ -3,11 +3,11 @@ package main
 import (
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
-	"github.com/swaggo/gin-swagger"
+	ginSwagger "github.com/swaggo/gin-swagger"
 	"starzeng.com/gin-demo/config"
 	"starzeng.com/gin-demo/docs"
-	"starzeng.com/gin-demo/handler"
 	"starzeng.com/gin-demo/middleware"
+	"starzeng.com/gin-demo/router"
 )
 
 // @title Gin JWT RBAC Demo API
@@ -30,6 +30,8 @@ func main() {
 	gin.ForceConsoleColor()
 	r := gin.Default()
 
+	router.InitRouter(r)
+
 	// Swagger 配置
 	docs.SwaggerInfo.BasePath = "/"
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -37,15 +39,7 @@ func main() {
 	// 全局错误处理
 	r.Use(gin.Logger(), middleware.RecoveryWithJSON())
 
-	r.POST("/login", handler.Login)
-
-	auth := r.Group("/api", middleware.JWTAuth())
-	auth.GET("/profile", handler.Profile)
-	auth.GET("/logout", handler.Logout)
-	auth.GET("/admin", middleware.RequireRole("admin"), handler.AdminOnly)
-	auth.POST("/write", middleware.RequirePermission("write"), handler.WriteData)
-
-	err := r.Run(config.AppConfig.Server.Port)
+	err := r.Run(config.GetServerAddr())
 	if err != nil {
 		return
 	}
